Fixed margins in general and typesizes on mobile.

--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,7 @@ header {
   justify-content: space-between;
   align-items: center;
   padding: 1rem;
+  border-bottom: solid black 1px;
 }
 
 main {
@@ -28,23 +29,20 @@ main {
   align-items: center;
   margin: 0;
   max-width: var(--contentWidth);
-  border-top: solid black 1px;
 }
 
 article {
+  font-size: 2.5rem;
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 0px;
   width: 80vw;
-  padding-bottom: 4rem;
-  margin-bottom: 6rem;
-  border-bottom: solid black 1px;
-  margin-top: 3rem;
+  margin-bottom: 8rem;
 }
 
 section {
-  margin-bottom: 2.5rem;
+  margin-bottom: none;
+  margin: 3rem 0 3rem 0;
 }
 
 .description {
@@ -59,7 +57,8 @@ footer {
   width: 100%;
   background-color: #cccccc;
   padding: 0;
-  margin-top: 5rem;
+  margin-top: 3rem;
+  margin-bottom: 8rem;
 }
 
 
@@ -93,7 +92,6 @@ h3 {
 
 p {
   width: 100%;
-  font-size: 2.5rem;
   margin-top: 1.7rem;
   margin-bottom: 1.7rem;
 }
@@ -102,7 +100,6 @@ a {
   color: blue;
   text-decoration: none;
   font-weight: 700;
-  font-size: 2.5rem;  
   box-shadow: inset 0 -0.4rem 0 0 blue;
   transition: box-shadow 0.1s;
 }
@@ -116,7 +113,7 @@ a:hover {
 figure {
   width: 80vw;
   padding: 0;
-  margin: 0;
+  margin: 0 0 1.7rem 0;
 }
 
 ul {
@@ -175,6 +172,7 @@ img {
   -webkit-box-shadow: 0px 0px 6px 1px #ccc;
   -moz-box-shadow: 0px 0px 6px 1px #ccc;
   box-shadow: 0px 0px 6px 1px #ccc;
+  background-color: #cccccc;
 }
 
 .preview2 {
@@ -193,6 +191,8 @@ img {
   -webkit-box-shadow: 0px 0px 6px 1px #ccc;
   -moz-box-shadow: 0px 0px 6px 1px #ccc;
   box-shadow: 0px 0px 6px 1px #ccc;
+  background-color: #cccccc;
+
 }
 
 .preview3 {
@@ -211,6 +211,8 @@ img {
   -webkit-box-shadow: 0px 0px 6px 1px #ccc;
   -moz-box-shadow: 0px 0px 6px 1px #ccc;
   box-shadow: 0px 0px 6px 1px #ccc;
+  background-color: #cccccc;
+
 }
 
 .preview4 {
@@ -229,6 +231,8 @@ img {
   -webkit-box-shadow: 0px 0px 6px 1px #ccc;
   -moz-box-shadow: 0px 0px 6px 1px #ccc;
   box-shadow: 0px 0px 6px 1px #ccc;
+  background-color: #cccccc;
+
 }
 
 .preview5 {
@@ -247,6 +251,8 @@ img {
   -webkit-box-shadow: 0px 0px 6px 1px #ccc;
   -moz-box-shadow: 0px 0px 6px 1px #ccc;
   box-shadow: 0px 0px 6px 1px #ccc;
+  background-color: #cccccc;
+
 }
 
 nav {
@@ -269,11 +275,6 @@ button {
 }
 
 .buttonlink, .buttonlink::after, .buttonlink:active, .buttonlink:hover, .buttonlink:hover::after, .buttonlink:visited {
-  font-size: 3rem;
-  letter-spacing: -0.02rem;
-  font-weight: 400;
-  margin: inherit;
-  padding: inherit;
   cursor: pointer;  
   color: black;
   text-decoration: none;
@@ -298,7 +299,7 @@ background-color: rgba(0, 0, 255, 0.2);
 }
 
 .five {
-background-color: rgba(255, 255, 255, 1);
+background-color: rgba(0 , 255, 0, 0.5);
 }
 
 .six {
@@ -322,11 +323,11 @@ background-color: rgba(255, 0, 0, 1);
 }
 
 .eleven {
-background-color: rgba(255, 0, 0, 0.7);
+background-color: rgba(255, 0, 0, 1);
 }
 
 .twelve {
-background-color: rgba(255, 0, 255, 0.7);
+background-color: rgba(255, 0, 255, 1);
 }
 
 .github {
@@ -341,7 +342,7 @@ background-color: rgba(255, 0, 255, 0.7);
   grid-template-rows: 44.4rem 44.4rem 44.4rem;
 }
 
-  .preview1 {
+.preview1 {
   grid-column: 2 / 3;  
   grid-row: 1 / 2;
 }
@@ -375,11 +376,17 @@ background-color: rgba(255, 0, 255, 0.7);
 
 @media only screen and (max-width: 1000px) {
 
+
  article {
-    width: auto;
-    margin-left: 2rem;
-    margin-right: 2rem;
+   width: 90vw;
+   font-size: 1.7rem;
+   margin-bottom: 4rem;
   }
+
+  section {
+  width: 100%;
+  margin: 2rem 0 2rem 0;
+}
 
   img {
     width: 100%;
@@ -390,8 +397,36 @@ background-color: rgba(255, 0, 255, 0.7);
   height: auto;
   }
 
-  p {
+  h1 {
+    font-size: 2.2rem;
+  }
+
+  h2 {
+    font-size: 2.2rem;
+  }
+
+h3 {
+    font-size: 1.1rem;
+  }
+
+p {
     width: 100%;
+    margin-top: 0.8rem;
+    margin-bottom: 0.8rem;
+  }
+
+a {
+  box-shadow: inset 0 -0.25rem 0 0 blue;
+}
+
+a:hover {
+  color: blue; 
+  box-shadow: inset 0 -0.25rem 0 0 blue;  
+  transition: box-shadow 0s;
+}
+
+  button {
+    font-size: 2.2rem;
   }
 
   .description {
@@ -400,16 +435,14 @@ background-color: rgba(255, 0, 255, 0.7);
 
   figure {
     width: 100%;
+    margin: 0 0 1rem 0;
   }
 
   .preview-all {
   width: 100%;
-  display: inline-grid;
-  grid-template-columns: 1rem auto 1rem;
-  grid-template-rows: 50rem 50rem 50rem 50rem 50rem;
-  grid-row-gap: 4rem;
-  grid-column-gap: 1rem;
-  margin-top: 0;
+  display: flex;
+  flex-direction: column;
+  margin-top: 4rem;
 }
 
   .preview1 {
@@ -417,10 +450,11 @@ background-color: rgba(255, 0, 255, 0.7);
     justify-content: center;
     height: 100%;
     width: auto;
-    grid-column: 2 / 3;  
-    grid-row: 1 / 2;
+/*     grid-column: 2 / 3;  
+    grid-row: 1 / 2; */
     justify-self: center;
     align-self: start;
+    margin: 0 2rem 4rem 2rem;
   }
 
   .preview2 {
@@ -428,10 +462,11 @@ background-color: rgba(255, 0, 255, 0.7);
     justify-content: center;
     height: 100%;
     width: auto;
-    grid-column: 2 / 3;  
-    grid-row: 2 / 3;
+  /*   grid-column: 2 / 3;  
+    grid-row: 2 / 3; */
     justify-self: center;
     align-self: start;
+    margin: 0 2rem 4rem 2rem;
   }
 
   .preview3 {
@@ -439,10 +474,11 @@ background-color: rgba(255, 0, 255, 0.7);
     justify-content: center;
     height: 100%;
     width: auto;
-    grid-column: 2 / 3;  
-    grid-row: 3 / 4;
+ /*    grid-column: 2 / 3;  
+    grid-row: 3 / 4; */
     justify-self: center;
     align-self: start;
+    margin: 0 2rem 4rem 2rem;
   }
 
     .preview4 {
@@ -450,10 +486,11 @@ background-color: rgba(255, 0, 255, 0.7);
     justify-content: center;
     height: 100%;
     width: auto;
-    grid-column: 2 / 3;  
-    grid-row: 4 / 5;
+   /*  grid-column: 2 / 3;  
+    grid-row: 4 / 5; */
     justify-self: center;
     align-self: start;
+    margin: 0 2rem 4rem 2rem;
   }
 
     .preview5 {
@@ -461,15 +498,22 @@ background-color: rgba(255, 0, 255, 0.7);
     justify-content: center;
     height: 100%;
     width: auto;
-    grid-column: 2 / 3;  
-    grid-row: 5 / 6;
+/*     grid-column: 2 / 3;  
+    grid-row: 5 / 6; */
     justify-self: center;
     align-self: start;
+    margin: 0 2rem 4rem 2rem;
   }
 
   .portrait {
     width: 100%;
   }
+
+  footer {
+  margin-top: 2rem;
+  margin-bottom: 4rem;
+}
+
 
 }
 
